--- a/css/components/box.css
+++ b/css/components/box.css
@@ -1,13 +1,12 @@
-#box {
+.box {
   display: inline-block;
-  box-sizing: border-box;
   background-color: #3a4042;
   box-shadow: 4px 4px 0 #000;
   text-align: center;
   padding: 40px 44px;
 }
 
-/* pega todos os h1 do dentro do box */
-#box h1 {
+/* pega todas as tags h1 do dentro do box */
+.box .title {
   margin-bottom: 28px;
 }
