:lipstick: Change title to main-title

--- a/css/components/main-title.css
+++ b/css/components/main-title.css
@@ -1,4 +1,4 @@
-.title {
+.main-title {
   font-family: "Press Start 2P", sans-serif;
   font-size: 40px;
   color: #960f14;
@@ -13,7 +13,7 @@
    que é uma classe de variação de um componente
    ========================================= 
 */
-.title.-second {
+.main-title.-second {
   color: #fff;
   text-shadow: none;
   text-align: center;
