--- a/css/components/main-action.css
+++ b/css/components/main-action.css
@@ -1,4 +1,4 @@
-.action {
+.main-action {
   display: inline-flex;
   align-items: center;
   color: #fff;
@@ -9,7 +9,7 @@
   margin-right: 30px;
 }
 
-.action:before {
+.main-action:before {
   content: "";
   display: inline-block;
   background-color: #960f14;
