--- a/css/components/main-banner.css
+++ b/css/components/main-banner.css
@@ -1,4 +1,4 @@
-.banner {
+.main-banner {
   box-sizing: border-box;
   background-image: url(../../Assets/FotoBanner.png);
   background-repeat: no-repeat;
@@ -9,18 +9,18 @@
   padding-left: 90px;
 }
 
-/* Pega o primeiro filho(.wrapper) do pai(.banner) */
-.banner .wrapper {
+/* Pega o primeiro filho(.wrapper) do pai(.main-banner) */
+.main-banner .wrapper {
   display: flex;
   flex-direction: column;
   width: 640px;
 }
 
-.banner .box {
+.main-banner .box {
   margin-bottom: 38px;
 }
 
-.banner .navigation {
+.main-banner .navigation {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
