--- a/css/components/main-button.css
+++ b/css/components/main-button.css
@@ -1,4 +1,4 @@
-.button {
+.main-button {
   display: inline-block;
   background-color: #960f14;
   padding: 18px 20px;
@@ -10,7 +10,7 @@
   text-decoration: none;
 }
 
-.button:hover {
+.main-button:hover {
   transform: scale(1.1);
   opacity: 0.7;
 }
