--- a/css/components/main-box.css
+++ b/css/components/main-box.css
@@ -1,4 +1,4 @@
-.box {
+.main-box {
   display: inline-block;
   background-color: #3a4042;
   box-shadow: 4px 4px 0 #000;
@@ -7,6 +7,6 @@
 }
 
 /* pega todas as tags h1 do dentro do box */
-.box .title {
+.main-box .main-title {
   margin-bottom: 28px;
 }
