--- a/css/components/node-card.css
+++ b/css/components/node-card.css
@@ -1,7 +1,22 @@
 .node-card {
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+}
+
+.node-card::before {
+  content: "";
+  position: absolute;
+  box-sizing: border-box;
+  bottom: 140px;
+  height: 0px;
+  width: 40px;
+  border: 2.5px dashed #000;
+  /* transform-origin: right center; */
+  transform: rotate(90deg) translateX(-62%);
+
+  /* transform: rotateY(180deg); */
 }
 
 .node-card .title {
