--- a/css/components/wrapper-skill.css
+++ b/css/components/wrapper-skill.css
@@ -1,9 +1,10 @@
 .wrapper-skill {
   display: flex;
   flex-wrap: wrap;
-  max-width: 960px;
+  /* max-width: 960px; */
   margin-left: auto;
   margin-right: auto;
+  justify-content: center;
 }
 
 .wrapper-skill .skill-tec {
@@ -20,4 +21,10 @@
 
 .wrapper-skill .progress-bar {
   width: 320px;
+}
+
+@media (max-width: 767px) {
+  .wrapper-skill {
+    display: grid;
+  }
 }
