:building_construction: Create bar above carousel in about section

--- a/css/components/main-carousel.css
+++ b/css/components/main-carousel.css
@@ -4,6 +4,18 @@
   padding-left: 100px;
 }
 
+/* barra acima do carousel */
+.main-carousel::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 38px;
+  display: block;
+  height: 5px;
+  width: 100%;
+  background-color: #000;
+}
+
 .main-carousel .button-arrow {
   position: absolute;
   bottom: 70px;
