--- a/css/components/wrapper-skill.css
+++ b/css/components/wrapper-skill.css
@@ -1,7 +1,7 @@
 .wrapper-skill {
   display: flex;
   flex-wrap: wrap;
-  /* max-width: 960px; */
+  max-width: 960px;
   margin-left: auto;
   margin-right: auto;
   justify-content: center;
