:lipstick: Add dotted lines to carousel ends in about section

--- a/css/components/main-box.css
+++ b/css/components/main-box.css
@@ -10,3 +10,10 @@
 .main-box .main-title {
   margin-bottom: 28px;
 }
+
+/* Responsive */
+@media (max-width: 767px) {
+  .main-box {
+    display: flex;
+  }
+}
