--- a/css/components/main-banner.css
+++ b/css/components/main-banner.css
@@ -25,3 +25,10 @@
   flex-direction: row;
   justify-content: space-evenly;
 }
+
+/*  Responsive  */
+@media (max-width: 768px) {
+  /* .main-banner {
+    background-size: 300px;
+  } */
+}
