--- a/css/components/main-carousel.css
+++ b/css/components/main-carousel.css
@@ -8,12 +8,22 @@
 .main-carousel::after {
   content: "";
   position: absolute;
-  left: 0;
-  top: 38px;
+  left: 40px;
   display: block;
-  height: 5px;
-  width: 100%;
+  height: 7px;
+  width: calc(100% - 80px);
   background-color: #000;
+  top: 38px;
+}
+/* barra pontilhada das extremidades */
+.main-carousel::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  display: block;
+  border: 3px dashed black;
+  width: 100%;
+  top: 38px;
 }
 
 .main-carousel .button-arrow {
