--- a/css/components/main-subtitle.css
+++ b/css/components/main-subtitle.css
@@ -4,3 +4,10 @@
   text-shadow: 4px 4px 0 #000;
   color: #fff;
 }
+
+/* Responsive */
+@media (max-width: 768px) {
+  .main-subtitle {
+    font-size: 18px;
+  }
+}
