--- a/css/components/main-banner.css
+++ b/css/components/main-banner.css
@@ -3,7 +3,7 @@
   background-image: url(../../Assets/FotoBanner.png);
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 900px;
+  height: 570px;
   border-bottom: 10px solid #000;
   padding-top: 115px;
   padding-left: 90px;
@@ -27,8 +27,24 @@
 }
 
 /*  Responsive  */
-@media (max-width: 768px) {
-  /* .main-banner {
-    background-size: 300px;
-  } */
+@media (max-width: 767px) {
+  .main-banner {
+    /* max-width: 100%; */
+    height: auto;
+    padding-top: 80px;
+    padding-left: 40px;
+  }
+
+  .main-banner .wrapper {
+    width: 400px;
+    margin-bottom: 28px;
+  }
+
+  .main-banner .main-box {
+    margin-bottom: 28px;
+  }
+
+  .main-banner .navigation {
+    justify-content: space-evenly;
+  }
 }
