--- a/css/components/main-button.css
+++ b/css/components/main-button.css
@@ -14,3 +14,11 @@
   transform: scale(1.1);
   opacity: 0.7;
 }
+
+/* Responsive */
+@media (max-width: 320px) {
+  .main-button {
+    font-size: 8px;
+    padding: 9px 10px;
+  }
+}
