--- a/css/components/main-box.css
+++ b/css/components/main-box.css
@@ -24,7 +24,7 @@
   }
 }
 
-@media (max-width: 320px) {
+@media (min-width: 320px) and (max-width: 526px) {
   .main-box {
     padding: 15px 15px;
     justify-content: center;
