--- a/css/components/main-title.css
+++ b/css/components/main-title.css
@@ -26,7 +26,7 @@
   }
 }
 
-@media (max-width: 320px) {
+@media (min-width: 320px) and (max-width: 526px) {
   .main-title {
     font-size: 15px;
   }
