--- a/css/components/main-banner.css
+++ b/css/components/main-banner.css
@@ -29,7 +29,6 @@
 /*  Responsive  */
 @media (max-width: 767px) {
   .main-banner {
-    /* max-width: 100%; */
     height: auto;
     padding-top: 80px;
     padding-left: 40px;
@@ -51,13 +50,13 @@
 
 @media (min-width: 320px) and (max-width: 526px) {
   .main-banner {
-    height: auto;
+    height: 260px;
     padding-top: 30px;
-    padding-left: 10px;
+    padding-left: 8px;
   }
 
   .main-banner .wrapper {
-    width: 200px;
+    width: 260px;
     margin-bottom: 18px;
   }
 
