:bug: Fix a bug in skills section in responsive design
3

--- a/css/components/skill-tec.css
+++ b/css/components/skill-tec.css
@@ -24,6 +24,7 @@
 @media (min-width: 320px) and (max-width: 526px) {
   .skill-tec {
     height: 80px;
+    width: 100%;
   }
   .skill-tec .title {
     font-size: 14px;
