--- a/css/components/wrapper-skill.css
+++ b/css/components/wrapper-skill.css
@@ -31,11 +31,10 @@
 
 @media (min-width: 320px) and (max-width: 526px) {
   .wrapper-skill .skill-tec {
+    width: 100%;
     margin: 0;
     justify-content: center;
     padding-bottom: 20px;
-
-    /* gap: 10px; */
   }
 
   .wrapper-skill .skill-tec:nth-child(odd) {
@@ -45,6 +44,6 @@
   }
 
   .wrapper-skill .progress-bar {
-    width: 250px;
+    width: 200px;
   }
 }
