--- a/css/components/button-arrow.css
+++ b/css/components/button-arrow.css
@@ -23,3 +23,25 @@
 .button-arrow.-left::before {
   transform: rotate(180deg) translateX(18px);
 }
+
+/* Responsive */
+@media (min-width: 320px) and (max-width: 526px) {
+  .button-arrow {
+    margin-left: 0px;
+    width: 30px;
+    height: 30px;
+  }
+  .button-arrow::before {
+    width: 10px;
+    height: 10px;
+    border: 10px solid transparent;
+
+    border-left: 15px solid white;
+
+    transform: translateX(2px);
+  }
+  .button-arrow.-left::before {
+    transform: rotate(180deg) translateX(8px);
+    /* margin-left: 10px; */
+  }
+}
