--- a/css/components/main-description.css
+++ b/css/components/main-description.css
@@ -5,3 +5,12 @@
   line-height: 1.3;
   margin: 51px 80px;
 }
+
+/* Responsive */
+@media (min-width: 320px) and (max-width: 526px) {
+  .main-description {
+    font-size: 16px;
+    line-height: 1.3;
+    margin: 51px 40px;
+  }
+}
