:iphone: Add responsive design in contact section

--- a/css/components/main-label.css
+++ b/css/components/main-label.css
@@ -4,3 +4,9 @@
   font-weight: 300;
   line-height: 40px;
 }
+
+@media (min-width: 320px) and (max-width: 526px) {
+  .main-label {
+    font-size: 20px;
+  }
+}
