--- a/css/components/main-input.css
+++ b/css/components/main-input.css
@@ -11,3 +11,12 @@
 .main-input.-textarea {
   height: 320px;
 }
+
+/* Responsive */
+@media (min-width: 320px) and (max-width: 526px) {
+  .main-input {
+    border: 3px solid #000;
+    font-size: 16px;
+    height: 30px;
+  }
+}
